<package format="3">
  <name>pcc</name>
  <version>0.0.1</version>
  <description>PointCloud clustering node</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>visualization_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
